FIXED THE OVERFLOW ISSUE

--- a/src/MtaOpen2025/MtaOpen2025Nav/tournamentNav.css
+++ b/src/MtaOpen2025/MtaOpen2025Nav/tournamentNav.css
@@ -7,7 +7,9 @@
 .topBar.light {
     background-color: #f0f0f0; /* Light background for the topBar */
 }
-
+.wholeBar {
+    width: 100vw;
+}
 .navbar.light {
     background-color: #ffffff; /* White navbar for light mode */
 }
