--- a/src/MtaOpen2025/Prizes/prizes.css
+++ b/src/MtaOpen2025/Prizes/prizes.css
@@ -15,6 +15,7 @@
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     margin: 40px 0;
     transition: 0.5s;
+    width: 100vw;
  
   }
   
