--- a/src/MtaOpen2025/Registration/registration.css
+++ b/src/MtaOpen2025/Registration/registration.css
@@ -48,6 +48,7 @@
     display: flex;
     flex-direction: column;
     height: 100%; /* Full viewport height */
+    width: 100vw;
     
 }
 .dark {
